# alarm-system

./: .gitignore  PLAN.md  README.md  WINDOWS_RELEASE_BUILD.md  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: alarm.icns
client/: client.py  hotkey.py  overlay.py  sound.py
common/: autostart.py  config.py  discovery.py  hotkey_subprocess.py  protocol.py  tray_icon.py  version.py
config/: client_config.toml  server_config.toml
docs/: migration-plan-csharp-wpf.md
scripts/: alarm_installer.spec  alarm_installer_mac.spec  build_executables.sh  create_dmg.sh  generate_icon.py  install_autostart_mac.py  install_autostart_windows.py  install_windows.bat  install_windows.ps1  installer.py  installer_mac.py
server/: dashboard.py  server.py  tray_icon.py
sim/: launch.py  run_simulation.sh  simulate.py
tests/: test_installer.py  test_protocol.py  test_server.py
