[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "alarm-system"
version = "1.0.0"
description = "LAN-based emergency alarm system for doctor practices"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "keyboard>=0.13.5",
    "pygame>=2.5.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
